# Super-Mario-Eclipse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bnrparser.py  build-debug.bat  build-release-deb.bat  build-release.bat  build.py  code.tmp  compiler.py  dolpic_ex1.szs  dolreader.py  getnumlines.py  kuriboloader-eu.s  kuriboloader-us.s  kuriboloader.s  log.txt  luigi.prm  mamma3.szs  prmparser.py  run-debug.bat  run-release-deb.bat  run-release.bat  run.bat  streamtools.py  test.txt  tmp.kxe  yaz0.py
KAMEK-BUILD/: source.code
debug/: opening.json
include/: camera.hxx  coop.hxx  darkness.hxx  defines.h  equivtype.hxx  funcs.hxx  globals.hxx  macros.h  message.hxx  player.hxx  ppc_intrinsics.h  settings.hxx  smparticle.hxx  stage.hxx
linker/: eu.map  linker-map.txt  us.map
release/: .config.json  opening.json
source/: camera.cpp  collision.cpp  dark_zhine.cpp  file_flags.cpp  floats.cpp  fludd.cpp  gpr_saving.s  init_mods.cpp  mario.cpp  music.cpp  runtime_mods.cpp  security.cpp  stage.cpp  yoshi.cpp
src/: c_kit.cpp  camera.cpp  card.cpp  cheats.cpp  collision.cpp  darkness.cpp  debug.cpp  demo.cpp  file_flags.cpp  fireypetey.cpp  fludd.cpp  framerate.cpp  fruit.cpp  generic.cpp  globals.cpp  init_mods.cpp  main.cpp  mario.cpp  message.cpp  multiplayer.cpp  multiplayer.s  music.cpp  objects.cpp  p_settings.hxx  patches.cpp  settings.cpp  shine.cpp  speedrun.cpp  stage.cpp  sun.cpp  sunscript.cpp  widescreen.cpp  yoshi.cpp
sunscript/: testbuiltins.sun
targets/: GCNKuriboClangDebug.cmake  GCNKuriboClangRelease.cmake  GCNKuriboClangReleaseDeb.cmake
(+951 files in other folders)
